assets/styles/_typography.scss
h1,
.h1,
.font-h1 {
  font-family: var(--primary-font-family);
  font-size: var(--h1-size-mobile);
  line-height: var(--h1-line-height);
  font-weight: var(--h1-font-weight);
  // margin-bottom: 1.5rem;
  word-break: break-word;

  @screen lgplus {
    font-size: var(--h1-size-desktop);
  }
}

h2,
.h2,
.font-h2 {
  font-family: var(--primary-font-family);
  font-size: var(--h2-size-mobile);
  line-height: var(--h2-line-height);
  font-weight: var(--h2-font-weight);
  // margin-bottom: 1.5rem;
  word-break: break-word;

  @screen lgplus {
    font-size: var(--h2-size-desktop);
  }
}

p,
.paragraph,
.font-body {
  font-family: var(--primary-font-family);
  font-size: var(--body-size-mobile);
  line-height: var(--body-line-height);
  font-weight: var(--body-font-weight);
  margin-block-end: 1rem;

  :last-child {
    margin-block-end: 0;
  }

  @screen lgplus {
    font-size: var(--body-size-desktop);
  }

  a {
    @apply no-underline;
    
    &:hover {
      color: var(--orangeHover);
    }

    &::after {
      content: '↗';
      font-size: 1rem;
      @apply ml-[5px];
      vertical-align: super;
    }

    &.link-NoArrow {
      &::after {
        content: '';
        @apply ml-0;
      }
    }
  }
}

.font-bodySmall,
samp {
  font-family: var(--primary-font-family);
  font-size: var(--body-small-size);
  line-height: var(--body-small-line-height);
  font-weight: var(--body-small-font-weight);
  margin-block-end: 0.5rem;

  a {
    @apply no-underline;
    
    &:hover {
      color: var(--orangeHover);
    }

    &::after {
      content: '↗';
      font-size: 0.675rem;
      @apply ml-[3px];
      vertical-align: super;
    }

    &.link-NoArrow {
      &::after {
        content: '';
        @apply ml-0;
      }
    }
  }
}

a.font-bodySmall {
  line-height: 1;
  @apply no-underline;
  
  &:hover {
    color: var(--orangeHover);
  }

  &::after {
    content: '↗';
    font-size: 0.675rem;
    @apply ml-[3px];
    vertical-align: super;
  }

  &.link-NoArrow {
    &::after {
      content: '';
      @apply ml-0;
    }
  }
}

.font-menu {
  font-family: var(--primary-font-family);
  font-size: var(--menu-size);
  line-height: var(--menu-line-height);
  font-weight: var(--menu-font-weight);
}

hr {
  border: 0.5px solid var(--black);
  margin: 0 auto;
}

code {
  background: var(--color-background-secondary);
  border-radius: 4px;
  display: inline-block;
  font-size: 0.95em;
  padding: 0 0.375em;
  word-break: break-word;
}

figcaption {
  color: var(--black);
  font-size: var(--body-small-size);
  margin-block-start: 0.25rem;
}

blockquote,
.blockquote {
  border-inline-start: 5px solid var(--color-accent);
  display: block;
  font-size: 1.44rem;
  font-style: italic;
  font-weight: 500;
  line-height: calc(1em + 0.75rem);
  margin: var(--flow-space) 0 var(--flow-space) 2.5rem;
  max-width: 100%;
  padding-inline-start: 0.8rem;

  footer {
    color: var(--color-text-muted);
    font-size: var(--body-size-desktop);
    margin-block-start: 0.25rem;
  }
}

.wysiwyg {
  h1,
  .h1,
  .font-h1,
  h2,
  .h2,
  .font-h2,
  h3,
  .h3,
  .font-h3 {
    margin-bottom: 1rem;
  }

  button {
    text-decoration: none;
  }

  p {
    &:last-child {
      margin-bottom: 0;
    }
  }
}

@media print {
  h1,
  .h1,
  h2,
  .h2 {
    font-size: 18pt;
  }

  h3,
  .h3,
  h4,
  .h4 {
    font-size: 14pt;
  }

  p {
    font-size: 10pt;
  }
}

